--- a/templates/visky/base.html
+++ b/templates/visky/base.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
-<head>
-    <link rel="icon" href="https://icons8.com/icon/uauSiMLkIeOc/no-drugs" type="image/x-icon">
-    <meta charset="UTF-8">
-    <title>{% block title %}{% endblock %}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <head>
+<!--        <link rel="icon" href="https://icons8.com/icon/uauSiMLkIeOc/no-drugs" type="image/x-icon">-->
+        <meta charset="UTF-8">
+        <title>{% block title %}{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+<!--        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
+<!--        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
+        <link rel="stylesheet" href="{% if debug %}{% static 'css/style.css' %}{% else %}{% static 'css/style.min.css' %}{% endif %}">
+    </head>
+    <body class="bg-sky-100">
+        <header class='h-20 text-purple-950 px-8 py-10'> 
+            
+            <img width="64" height="64" src="https://img.icons8.com/cotton/64/000000/alcohol.png" alt="alcohol"/>
+            <h2 class="items-center">List of alcohols</h2>  
+        </header>
+        {% block content %}
 
-</head>
-<body style="padding-left: 50px; padding-right: 50px">
-{% block content %}
-
-
-{% endblock content %}
-</body>
+        {% endblock content %}
+    </body>
 </html>
