--- a/templates/visky/base.html
+++ b/templates/visky/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 
-<html lang="en">
+<html lang="en" data-theme="cupcake">
     <head>
 <!--        <link rel="icon" href="https://icons8.com/icon/uauSiMLkIeOc/no-drugs" type="image/x-icon">-->
         <meta charset="UTF-8">
@@ -10,12 +10,20 @@
 <!--        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">-->
 <!--        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
         <link rel="stylesheet" href="{% if debug %}{% static 'css/style.css' %}{% else %}{% static 'css/style.min.css' %}{% endif %}">
+        <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb1lZYygJmzgSwoxRggbCHcjc0rB2XoQrxeTUQyRjrOnlCoYta87iKBWq3EsdM2" crossorigin="anonymous"></script>
     </head>
-    <body class="bg-sky-100">
-        <header class='h-20 text-purple-950 px-8 py-10'> 
-            
-            <img width="64" height="64" src="https://img.icons8.com/cotton/64/000000/alcohol.png" alt="alcohol"/>
-            <h2 class="items-center">List of alcohols</h2>  
+    <body class="bg-sky-100" data-theme="lemonade">
+        <header class='h-20 text-purple-950 px-8 py-10' data-theme=""> 
+            <div class="flex flex-row mb-10">
+                <div class="items-start basis-1/3 ml-8">
+                    <a href="{% url 'index' %}">
+                        <img width="64" height="64" src="https://img.icons8.com/cotton/64/000000/alcohol.png" alt="alcohol"/>
+                    </a>
+                </div>
+                <div class="items-center font-semibold basis-2/3">
+                    <h2 class="">List of alcohols</h2>  
+                </div>                  
+            </div>
         </header>
         {% block content %}
 
