--- a/templates/visky/alcohol_list.html
+++ b/templates/visky/alcohol_list.html
@@ -1,3 +1,5 @@
+{% load static %}
+{% load alco_tags %}
 <div class="overflow-x-auto ml-8 mr-8">
 <table class="table">
     <thead>
@@ -17,7 +19,7 @@
                 <div class="avatar">
                     <div class="mask mask-squircle">
                         <a href="{{ elem.product_link }}">
-                            <img src="{{elem.image}}" loading="lazy" alt="Фото відсутнє">
+                            <img src="{{elem.image|static_path}}" loading="lazy" alt="Фото відсутнє">
                         </a>
                     </div>
                 </div>
