--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -1,7 +1,7 @@
 {% load product_tags %}
 {% load static %}
 <div class="overflow-x-auto ml-8 mr-8">
-<table class="table">
+<table class="hover:table-auto">
     <thead>
         <tr>
             <th>Назва</th>
@@ -19,7 +19,7 @@
         <td>
             <div class="flex items-center gap-3>
                 <div class="avatar">
-                    <div class="mask mask-squircle">
+                    <div class="mask mask-hexagon w-64">
                         <a href="{{ product.link }}">
                             {% with static_path=product.image|static_path %} 
                             <img src="{{static_path}}" loading="lazy" alt="Фото відсутнє">
