--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,16 @@
                         <img width="64" height="64" src="https://img.icons8.com/cotton/64/000000/alcohol.png" alt="alcohol"/>
                     </a>
                 </div>
-                <div class="items-center font-semibold basis-2/3">
+                <div class="items-center font-semibold basis-1/3">
+                    <ul class="menu menu-vertical lg:menu-horizontal bg-base-200 rounded-box ">
+                        <li class="active"><a href="{% url "index" %}">Алкоголь</a></li>
+                        <li><a href="{% url "product_list" %}">Акції</a></li>
+                        <li><a>Item 3</a></li>
+                      </ul>
+            
                     <h2 class="">{% block header %}List of alcohols{% endblock header %}</h2>  
-                </div>                  
+                </div>  
+                <div class="items-end basis-1/3 mr-8"></div>                
             </div>
         </header>
         {% block content %}
