--- a/templates/visky/alcohol_list.html
+++ b/templates/visky/alcohol_list.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load alco_tags %}
+
 <div class="overflow-x-auto ml-8 mr-8">
 <table class="table">
     <thead>
@@ -52,11 +53,11 @@
             </ul>
         </td>
         <td>
-        <button class="px-4 py-2 rounded hover:bg-black-100">
+        <button class="btn btn-ghost btn-xs">
             <a href="{% url 'detail' elem.id %}">
                 >>
             </a>
-        </button>    
+        </button>
         </td>
     </tr>
     {% endfor %}
@@ -75,3 +76,17 @@
     {% endif %}
 </div>
 
+<script>
+{% if debug %}
+    if (typeof window.htmx !== "undefined") {
+        htmx.on("htmx:afterSettle", function(detail) {
+            if (
+                typeof window.djdt !== "undefined"
+                && detail.target instanceof HTMLBodyElement
+            ) {
+                djdt.show_toolbar();
+            }
+        });
+    }
+{% endif %}
+</script>
